fix: dark mode

--- a/Web/Views/Shared/Components/MuscleTargets/MuscleTargets.cshtml.css
+++ b/Web/Views/Shared/Components/MuscleTargets/MuscleTargets.cshtml.css
@@ -15,6 +15,12 @@ img {
     vertical-align: unset;
 }
 
+@media (prefers-color-scheme: light) {
+    .filter-invert {
+        filter: invert(.45);
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     img {
         filter: invert(.85);
